[SECURITY] Phase 1: Critical security fixes
Implements 4 critical security vulnerabilities from security audit:

1. OAuth CSRF Protection
   - Add state parameter to OAuth flow (secrets.token_urlsafe)
   - Add validate_state() method to OneDriveClient
   - Validate state on callback to prevent CSRF attacks
   - Reject authentication if state validation fails
   - Risk: Account takeover via CSRF

2. Localhost-Only OAuth Callback
   - Bind to 127.0.0.1 instead of 0.0.0.0 in both CLI and GUI
   - Prevents remote attackers from intercepting OAuth callbacks
   - Add 5-minute timeout to callback servers
   - Risk: Remote callback interception

3. Sanitized Logging
   - Remove authorization codes from debug logs
   - Remove token headers from debug logs
   - Add _sanitize_for_log() helper method
   - Sanitize all error response bodies before logging
   - Risk: Credential exposure in log files

4. Encrypted Token Storage
   - Encrypt tokens with cryptography.Fernet (AES-128)
   - Store encryption key in system keyring
   - Tokens now saved as encrypted binary instead of plaintext JSON
   - Auto-delete old plaintext tokens with warning to re-authenticate
   - Risk: Token theft via filesystem access

BREAKING CHANGE: Users must re-authenticate after this update.
Old plaintext tokens will be automatically deleted when load fails.

Dependencies added:
- cryptography>=41.0.0 (Fernet encryption)
- keyring>=24.0.0 (secure key storage)
- certifi>=2023.7.22 (certificate validation)

Files modified:
- src/odsc/onedrive_client.py (+60 lines: CSRF, sanitization, certifi)
- src/odsc/cli.py (+14 lines: localhost binding, state validation)
- src/odsc/gui.py (+19 lines: localhost binding, state validation)
- src/odsc/config.py (+37 lines: encryption/decryption methods)
- requirements.txt (+3 dependencies)
- setup.py (+3 dependencies)
- install.sh (+3 system packages)

Security improvements:
✓ CSRF protection via state parameter
✓ Encrypted token storage (AES-128)
✓ Localhost-only OAuth bin

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,3 +29,8 @@ python-dateutil>=2.8.2
 
 # Desktop trash integration
 send2trash>=1.8.0
+
+# Security - Token encryption
+cryptography>=41.0.0
+keyring>=24.0.0
+certifi>=2023.7.22
